--- a/packages/esm-loader-svelte/package.json
+++ b/packages/esm-loader-svelte/package.json
@@ -1,8 +1,8 @@
 {
   "name": "esm-loader-svelte",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Chainable ESModule Loader for Svelte and SvelteKit",
-  "homepage": "https://github.com/brev/esm-loader-svelte#readme",
+  "homepage": "https://github.com/brev/esm-loaders/tree/main/packages/esm-loader-svelte#readme",
   "license": "MIT",
   "main": "./dist/index.js",
   "type": "module",
@@ -12,7 +12,7 @@
     "url": "https://github.com/brev"
   },
   "bugs": {
-    "url": "https://github.com/brev/esm-loader-svelte/issues"
+    "url": "https://github.com/brev/esm-loaders/issues"
   },
   "dependencies": {
     "create-esm-loader": "^0.1.1",
@@ -54,7 +54,8 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/brev/esm-loader-svelte.git"
+    "url": "https://github.com/brev/esm-loaders.git",
+    "directory": "packages/esm-loader-svelte"
   },
   "scripts": {
     "bin:eslint": "eslint --ignore-path .gitignore .",
