--- a/packages/esm-loader-svelte/package.json
+++ b/packages/esm-loader-svelte/package.json
@@ -1,6 +1,6 @@
 {
   "name": "esm-loader-svelte",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "Chainable ESModule Loader for Svelte and SvelteKit",
   "homepage": "https://github.com/brev/esm-loaders/tree/main/packages/esm-loader-svelte#readme",
   "license": "MIT",
@@ -15,30 +15,30 @@
     "url": "https://github.com/brev/esm-loaders/issues"
   },
   "dependencies": {
-    "create-esm-loader": "^0.1.1",
-    "semver": "^7.3.5",
-    "svelte": "^3.46.4"
+    "create-esm-loader": "^0.1.2",
+    "npm-run-all": "^4.1.5",
+    "semver": "^7.3.7",
+    "svelte": "^3.49.0"
   },
   "devDependencies": {
-    "@testing-library/svelte": "^3.0.3",
-    "@types/node": "^17.0.21",
-    "@typescript-eslint/eslint-plugin": "^5.12.1",
-    "@typescript-eslint/parser": "^5.12.1",
-    "c8": "^7.11.0",
-    "eslint": "^8.10.0",
-    "eslint-config-prettier": "^8.4.0",
-    "global-jsdom": "^8.4.0",
-    "jsdom": "^19.0.0",
-    "node-esm-loader": "^0.0.1",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.7",
-    "postcss-load-config": "^3.1.3",
+    "@testing-library/svelte": "^3.2.1",
+    "@types/node": "^18.7.14",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
+    "c8": "^7.12.0",
+    "eslint": "^8.23.0",
+    "eslint-config-prettier": "^8.5.0",
+    "global-jsdom": "^8.5.0",
+    "jsdom": "^20.0.0",
+    "node-esm-loader": "^0.0.3",
+    "postcss": "^8.4.16",
+    "postcss-load-config": "^4.0.1",
     "postcss-nested": "^5.0.6",
-    "prettier": "^2.5.1",
+    "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
-    "svelte-preprocess": "^4.10.4",
-    "typescript": "^4.5.5",
-    "uvu": "^0.5.3"
+    "svelte-preprocess": "^4.10.7",
+    "typescript": "^4.8.2",
+    "uvu": "^0.5.6"
   },
   "files": [
     "dist/*"
@@ -62,10 +62,10 @@
     "bin:prettier": "prettier --ignore-path .gitignore .",
     "bin:uvu": "NODE_OPTIONS=\"--experimental-loader node-esm-loader\" uvu test .test.js",
     "build": "tsc",
-    "build:watch": "run-s 'build -- --watch'",
+    "build:watch": "run-s 'build --watch'",
     "clean": "rimraf coverage/ dist/",
-    "format": "run-s 'bin:prettier -- --write'",
-    "lint": "run-s 'bin:prettier -- --check' bin:eslint",
+    "format": "run-s 'bin:prettier --write'",
+    "lint": "run-s 'bin:prettier --check' bin:eslint",
     "test": "run-s build bin:uvu",
     "test:cover": "c8 run-s test"
   }
