--- a/packages/esm-loader-typescript/package.json
+++ b/packages/esm-loader-typescript/package.json
@@ -51,7 +51,7 @@
   "scripts": {
     "bin:eslint": "eslint --ignore-path .gitignore .",
     "bin:prettier": "prettier --ignore-path .gitignore .",
-    "bin:uvu": "NODE_OPTIONS=\"--experimental-loader ./dist/index.js\" uvu test .test.js",
+    "bin:uvu": "NODE_OPTIONS=\"--loader ./dist/index.js\" uvu test .test.js",
     "build": "tsc",
     "build:watch": "run-s 'build --watch'",
     "clean": "rimraf coverage/ dist/",
