--- a/packages/esm-loader-mock-exports/package.json
+++ b/packages/esm-loader-mock-exports/package.json
@@ -61,13 +61,14 @@
   "scripts": {
     "bin:eslint": "eslint --ignore-path .gitignore .",
     "bin:prettier": "prettier --ignore-path .gitignore .",
-    "bin:tsc": "tsc --noEmit",
+    "bin:tsc": "tsc",
+    "bin:tscp": "tscp",
     "bin:uvu": "NODE_OPTIONS=\"--loader node-esm-loader\" uvu test .test.js",
-    "build": "tsc && tscp",
+    "build": "run-s bin:tsc bin:tscp",
     "build:watch": "tsc-watch --onSuccess tscp",
     "clean": "rimraf coverage/ dist/",
     "format": "run-s 'bin:prettier --write'",
-    "lint": "run-s 'bin:prettier --check' bin:eslint bin:tsc",
+    "lint": "run-s 'bin:prettier --check' bin:eslint 'bin:tsc --noEmit'",
     "test": "run-s build bin:uvu",
     "test:cover": "c8 run-s test"
   }
