Improve file extension detection. All loaders now work with query strings, etc (thanks to @jakobrosenberg). Dependency updates. Improve code coverage reports. Fix a few new typing errors.

--- a/packages/esm-loader-mock-exports/.c8rc.json
+++ b/packages/esm-loader-mock-exports/.c8rc.json
@@ -1,5 +1,6 @@
 {
   "all": true,
+  "exclude": ["**/*.d.ts", "dist/stubs/"],
   "reporter": ["text", "html"],
-  "src": "src/"
+  "src": "dist/"
 }
