--- a/packages/esm-loader-svelte/.c8rc.json
+++ b/packages/esm-loader-svelte/.c8rc.json
@@ -2,5 +2,5 @@
   "all": true,
   "extension": [".js", ".cjs", ".ts", ".svelte"],
   "reporter": ["text", "html"],
-  "src": "src/"
+  "src": "dist/"
 }
