--- a/packages/esm-loader-mock-exports/package.json
+++ b/packages/esm-loader-mock-exports/package.json
@@ -1,6 +1,6 @@
 {
   "name": "esm-loader-mock-exports",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "Chainable ESModule Loader for mocking module exports",
   "homepage": "https://github.com/brev/esm-loaders/tree/main/packages/esm-loader-mock-exports#readme",
   "license": "MIT",
@@ -15,28 +15,29 @@
     "url": "https://github.com/brev/esm-loaders/issues"
   },
   "dependencies": {
-    "astring": "^1.8.3",
-    "create-esm-loader": "^0.1.2",
-    "esquery": "^1.4.0",
-    "estree-walker": "^3.0.1",
+    "astring": "^1.8.4",
+    "create-esm-loader": "^0.2.3",
+    "esquery": "^1.5.0",
+    "estree-walker": "^3.0.3",
     "is-valid-var-name": "^1.0.2",
-    "klona": "^2.0.5",
-    "meriyah": "^4.3.1",
+    "klona": "^2.0.6",
+    "meriyah": "^4.3.5",
     "npm-run-all": "^4.1.5"
   },
   "devDependencies": {
-    "@types/node": "^18.7.19",
-    "@typescript-eslint/eslint-plugin": "^5.38.0",
-    "@typescript-eslint/parser": "^5.38.0",
-    "c8": "^7.12.0",
-    "eslint": "^8.24.0",
-    "eslint-config-prettier": "^8.5.0",
-    "node-esm-loader": "^0.0.3",
-    "prettier": "^2.7.1",
-    "rimraf": "^3.0.2",
-    "tsc-watch": "^5.0.3",
-    "typescript": "^4.8.3",
-    "typescript-cp": "^0.1.6",
+    "@types/estree": "^1.0.0",
+    "@types/node": "^18.15.5",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
+    "c8": "^7.13.0",
+    "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.8.0",
+    "node-esm-loader": "^0.2.3",
+    "prettier": "^2.8.6",
+    "rimraf": "^4.4.1",
+    "tsc-watch": "^6.0.0",
+    "typescript": "^5.0.2",
+    "typescript-cp": "^0.1.7",
     "uvu": "^0.5.6"
   },
   "files": [
