--- a/packages/esm-loader-mock-exports/package.json
+++ b/packages/esm-loader-mock-exports/package.json
@@ -15,29 +15,28 @@
     "url": "https://github.com/brev/esm-loaders/issues"
   },
   "dependencies": {
-    "astring": "^1.8.4",
+    "astring": "^1.8.6",
     "create-esm-loader": "^0.2.3",
     "esquery": "^1.5.0",
     "estree-walker": "^3.0.3",
-    "is-valid-var-name": "^1.0.2",
     "klona": "^2.0.6",
-    "meriyah": "^4.3.5",
+    "meriyah": "^4.3.7",
     "npm-run-all": "^4.1.5"
   },
   "devDependencies": {
-    "@types/estree": "^1.0.0",
-    "@types/node": "^18.15.5",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
-    "c8": "^7.13.0",
-    "eslint": "^8.36.0",
+    "@types/estree": "^1.0.1",
+    "@types/node": "^20.3.2",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "c8": "^8.0.0",
+    "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "node-esm-loader": "^0.2.3",
-    "prettier": "^2.8.6",
-    "rimraf": "^4.4.1",
-    "tsc-watch": "^6.0.0",
-    "typescript": "^5.0.2",
-    "typescript-cp": "^0.1.7",
+    "prettier": "^2.8.8",
+    "rimraf": "^5.0.1",
+    "tsc-watch": "^6.0.4",
+    "typescript": "^5.1.6",
+    "typescript-cp": "^0.1.8",
     "uvu": "^0.5.6"
   },
   "files": [
@@ -67,7 +66,7 @@
     "build": "run-s bin:tsc bin:tscp",
     "build:watch": "tsc-watch --onSuccess tscp",
     "clean": "rimraf coverage/ dist/",
-    "format": "run-s 'bin:prettier --write'",
+    "format": "run-s 'bin:prettier --write --list-different'",
     "lint": "run-s 'bin:prettier --check' bin:eslint 'bin:tsc --noEmit'",
     "test": "run-s build bin:uvu",
     "test:cover": "c8 run-s test"
