--- a/packages/esm-loader-import-alias/package.json
+++ b/packages/esm-loader-import-alias/package.json
@@ -1,6 +1,6 @@
 {
   "name": "esm-loader-import-alias",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "Chainable ESModule Loader for import path aliases",
   "homepage": "https://github.com/brev/esm-loaders/tree/main/packages/esm-loader-import-alias#readme",
   "license": "MIT",
@@ -15,23 +15,23 @@
     "url": "https://github.com/brev/esm-loaders/issues"
   },
   "dependencies": {
-    "astring": "^1.8.4",
+    "astring": "^1.8.6",
     "create-esm-loader": "^0.2.3",
     "esquery": "^1.5.0",
-    "meriyah": "^4.3.5",
+    "meriyah": "^4.3.7",
     "npm-run-all": "^4.1.5"
   },
   "devDependencies": {
-    "@types/node": "^18.15.5",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
-    "c8": "^7.13.0",
-    "eslint": "^8.36.0",
+    "@types/node": "^20.3.2",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "c8": "^8.0.0",
+    "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "node-esm-loader": "^0.2.3",
-    "prettier": "^2.8.6",
-    "rimraf": "^4.4.1",
-    "typescript": "^5.0.2",
+    "prettier": "^2.8.8",
+    "rimraf": "^5.0.1",
+    "typescript": "^5.1.6",
     "uvu": "^0.5.6"
   },
   "files": [
@@ -59,7 +59,7 @@
     "build": "run-s bin:tsc",
     "build:watch": "run-s 'bin:tsc --watch'",
     "clean": "rimraf coverage/ dist/",
-    "format": "run-s 'bin:prettier --write'",
+    "format": "run-s 'bin:prettier --write --list-different'",
     "lint": "run-s 'bin:prettier --check' bin:eslint 'bin:tsc --noEmit'",
     "test": "run-s build bin:uvu",
     "test:cover": "c8 run-s test"
