--- a/packages/esm-loader-json/package.json
+++ b/packages/esm-loader-json/package.json
@@ -1,6 +1,6 @@
 {
   "name": "esm-loader-json",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Chainable ESModule Loader for importing JSON files as modules",
   "homepage": "https://github.com/brev/esm-loaders/tree/main/packages/esm-loader-json#readme",
   "license": "MIT",
@@ -17,18 +17,18 @@
   "dependencies": {
     "create-esm-loader": "^0.2.3",
     "npm-run-all": "^4.1.5",
-    "semver": "^7.3.8"
+    "semver": "^7.5.3"
   },
   "devDependencies": {
-    "@types/node": "^18.15.5",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
-    "c8": "^7.13.0",
-    "eslint": "^8.36.0",
+    "@types/node": "^20.3.2",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "c8": "^8.0.0",
+    "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
-    "prettier": "^2.8.6",
-    "rimraf": "^4.4.1",
-    "typescript": "^5.0.2",
+    "prettier": "^2.8.8",
+    "rimraf": "^5.0.1",
+    "typescript": "^5.1.6",
     "uvu": "^0.5.6"
   },
   "files": [
@@ -56,7 +56,7 @@
     "build": "run-s bin:tsc",
     "build:watch": "run-s 'bin:tsc --watch'",
     "clean": "rimraf coverage/ dist/",
-    "format": "run-s 'bin:prettier --write'",
+    "format": "run-s 'bin:prettier --write --list-different'",
     "lint": "run-s 'bin:prettier --check' bin:eslint 'bin:tsc --noEmit'",
     "test": "run-s build bin:uvu",
     "test:cover": "c8 run-s test"
