--- a/packages/esm-loader-svelte/package.json
+++ b/packages/esm-loader-svelte/package.json
@@ -1,6 +1,6 @@
 {
   "name": "esm-loader-svelte",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "Chainable ESModule Loader for Svelte and SvelteKit",
   "homepage": "https://github.com/brev/esm-loaders/tree/main/packages/esm-loader-svelte#readme",
   "license": "MIT",
@@ -17,27 +17,27 @@
   "dependencies": {
     "create-esm-loader": "^0.2.3",
     "npm-run-all": "^4.1.5",
-    "semver": "^7.3.8",
-    "svelte": "^3.57.0"
+    "semver": "^7.5.3",
+    "svelte": "^4.0.1"
   },
   "devDependencies": {
-    "@testing-library/svelte": "^3.2.2",
-    "@types/node": "^18.15.5",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
-    "c8": "^7.13.0",
-    "eslint": "^8.36.0",
+    "@testing-library/svelte": "^4.0.2",
+    "@types/node": "^20.3.2",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "c8": "^8.0.0",
+    "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
-    "global-jsdom": "^8.8.0",
-    "jsdom": "^21.1.1",
+    "global-jsdom": "^9.0.1",
+    "jsdom": "^22.1.0",
     "node-esm-loader": "^0.2.3",
-    "postcss": "^8.4.21",
+    "postcss": "^8.4.24",
     "postcss-load-config": "^4.0.1",
     "postcss-nested": "^6.0.1",
-    "prettier": "^2.8.6",
-    "rimraf": "^4.4.1",
-    "svelte-preprocess": "^5.0.3",
-    "typescript": "^5.0.2",
+    "prettier": "^2.8.8",
+    "rimraf": "^5.0.1",
+    "svelte-preprocess": "^5.0.4",
+    "typescript": "^5.1.6",
     "uvu": "^0.5.6"
   },
   "files": [
@@ -65,7 +65,7 @@
     "build": "run-s bin:tsc",
     "build:watch": "run-s 'bin:tsc --watch'",
     "clean": "rimraf coverage/ dist/",
-    "format": "run-s 'bin:prettier --write'",
+    "format": "run-s 'bin:prettier --write --list-different'",
     "lint": "run-s 'bin:prettier --check' bin:eslint 'bin:tsc --noEmit'",
     "test": "run-s build bin:uvu",
     "test:cover": "c8 run-s test"
