--- a/packages/esm-loader-typescript/package.json
+++ b/packages/esm-loader-typescript/package.json
@@ -1,6 +1,6 @@
 {
   "name": "esm-loader-typescript",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Chainable ESModule Loader for Typescript",
   "homepage": "https://github.com/brev/esm-loaders/tree/main/packages/esm-loader-typescript#readme",
   "license": "MIT",
@@ -17,19 +17,19 @@
   "dependencies": {
     "create-esm-loader": "^0.2.3",
     "npm-run-all": "^4.1.5",
-    "semver": "^7.3.8",
-    "typescript": "^5.0.2"
+    "semver": "^7.5.3",
+    "typescript": "^5.1.6"
   },
   "devDependencies": {
-    "@types/node": "^18.15.5",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
-    "c8": "^7.13.0",
-    "eslint": "^8.36.0",
+    "@types/node": "^20.3.2",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "c8": "^8.0.0",
+    "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "node-esm-loader": "^0.2.3",
-    "prettier": "^2.8.6",
-    "rimraf": "^4.4.1",
+    "prettier": "^2.8.8",
+    "rimraf": "^5.0.1",
     "uvu": "^0.5.6"
   },
   "files": [
@@ -52,7 +52,7 @@
     "bin:eslint": "eslint --ignore-path .gitignore .",
     "bin:prettier": "prettier --ignore-path .gitignore .",
     "bin:prettier:check": "run-s 'bin:prettier --check'",
-    "bin:prettier:write": "run-s 'bin:prettier --write'",
+    "bin:prettier:write": "run-s 'bin:prettier --write --list-different'",
     "bin:tsc": "tsc",
     "bin:tsc:check": "run-s 'bin:tsc --noEmit'",
     "bin:tsc:checktest": "run-s 'bin:tsc --noEmit --project test/tsconfig.json'",
