Fixes #7 - Node.js >= 20.7 `--import` module registration: - Update docs to show new Node >= 20.7 `--import` registration usage,   as per recent `node-esm-loader` and `create-esm-loader` changes. - Update docs to better headings heirarchy. - Dependency updates. - Bump version numbers for new release.

--- a/packages/esm-loader-import-alias/package.json
+++ b/packages/esm-loader-import-alias/package.json
@@ -1,6 +1,6 @@
 {
   "name": "esm-loader-import-alias",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "Chainable ESModule Loader for import path aliases",
   "homepage": "https://github.com/brev/esm-loaders/tree/main/packages/esm-loader-import-alias#readme",
   "license": "MIT",
@@ -16,22 +16,22 @@
   },
   "dependencies": {
     "astring": "^1.8.6",
-    "create-esm-loader": "^0.2.3",
+    "create-esm-loader": "^0.2.5",
     "esquery": "^1.5.0",
-    "meriyah": "^4.3.7",
+    "meriyah": "^4.3.8",
     "npm-run-all": "^4.1.5"
   },
   "devDependencies": {
-    "@types/node": "^20.3.2",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1",
-    "c8": "^8.0.0",
-    "eslint": "^8.43.0",
-    "eslint-config-prettier": "^8.8.0",
-    "node-esm-loader": "^0.2.3",
-    "prettier": "^2.8.8",
-    "rimraf": "^5.0.1",
-    "typescript": "^5.1.6",
+    "@types/node": "^20.8.10",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.9.1",
+    "c8": "^8.0.1",
+    "eslint": "^8.52.0",
+    "eslint-config-prettier": "^9.0.0",
+    "node-esm-loader": "^0.2.5",
+    "prettier": "^3.0.3",
+    "rimraf": "^5.0.5",
+    "typescript": "^5.2.2",
     "uvu": "^0.5.6"
   },
   "files": [
@@ -55,7 +55,7 @@
     "bin:eslint": "eslint --ignore-path .gitignore .",
     "bin:prettier": "prettier --ignore-path .gitignore .",
     "bin:tsc": "tsc",
-    "bin:uvu": "NODE_OPTIONS=\"--loader node-esm-loader\" uvu test .test.js",
+    "bin:uvu": "NODE_OPTIONS=\"--import node-esm-loader/register\" uvu test .test.js",
     "build": "run-s bin:tsc",
     "build:watch": "run-s 'bin:tsc --watch'",
     "clean": "rimraf coverage/ dist/",
