--- a/packages/esm-loader-json/package.json
+++ b/packages/esm-loader-json/package.json
@@ -1,6 +1,6 @@
 {
   "name": "esm-loader-json",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Chainable ESModule Loader for importing JSON files as modules",
   "homepage": "https://github.com/brev/esm-loaders/tree/main/packages/esm-loader-json#readme",
   "license": "MIT",
@@ -15,20 +15,20 @@
     "url": "https://github.com/brev/esm-loaders/issues"
   },
   "dependencies": {
-    "create-esm-loader": "^0.2.3",
+    "create-esm-loader": "^0.2.5",
     "npm-run-all": "^4.1.5",
-    "semver": "^7.5.3"
+    "semver": "^7.5.4"
   },
   "devDependencies": {
-    "@types/node": "^20.3.2",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1",
-    "c8": "^8.0.0",
-    "eslint": "^8.43.0",
-    "eslint-config-prettier": "^8.8.0",
-    "prettier": "^2.8.8",
-    "rimraf": "^5.0.1",
-    "typescript": "^5.1.6",
+    "@types/node": "^20.8.10",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.9.1",
+    "c8": "^8.0.1",
+    "eslint": "^8.52.0",
+    "eslint-config-prettier": "^9.0.0",
+    "prettier": "^3.0.3",
+    "rimraf": "^5.0.5",
+    "typescript": "^5.2.2",
     "uvu": "^0.5.6"
   },
   "files": [
@@ -52,7 +52,7 @@
     "bin:eslint": "eslint --ignore-path .gitignore .",
     "bin:prettier": "prettier --ignore-path .gitignore .",
     "bin:tsc": "tsc",
-    "bin:uvu": "NODE_OPTIONS=\"--loader ./dist/index.js\" uvu test .test.js",
+    "bin:uvu": "NODE_OPTIONS=\"--import=./test/register.js\" uvu test .test.js",
     "build": "run-s bin:tsc",
     "build:watch": "run-s 'bin:tsc --watch'",
     "clean": "rimraf coverage/ dist/",
