--- a/packages/esm-loader-mock-exports/package.json
+++ b/packages/esm-loader-mock-exports/package.json
@@ -1,6 +1,6 @@
 {
   "name": "esm-loader-mock-exports",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "description": "Chainable ESModule Loader for mocking module exports",
   "homepage": "https://github.com/brev/esm-loaders/tree/main/packages/esm-loader-mock-exports#readme",
   "license": "MIT",
@@ -16,27 +16,27 @@
   },
   "dependencies": {
     "astring": "^1.8.6",
-    "create-esm-loader": "^0.2.3",
+    "create-esm-loader": "^0.2.5",
     "esquery": "^1.5.0",
     "estree-walker": "^3.0.3",
     "klona": "^2.0.6",
-    "meriyah": "^4.3.7",
+    "meriyah": "^4.3.8",
     "npm-run-all": "^4.1.5"
   },
   "devDependencies": {
-    "@types/estree": "^1.0.1",
-    "@types/node": "^20.3.2",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1",
-    "c8": "^8.0.0",
-    "eslint": "^8.43.0",
-    "eslint-config-prettier": "^8.8.0",
-    "node-esm-loader": "^0.2.3",
-    "prettier": "^2.8.8",
-    "rimraf": "^5.0.1",
+    "@types/estree": "^1.0.4",
+    "@types/node": "^20.8.10",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.9.1",
+    "c8": "^8.0.1",
+    "eslint": "^8.52.0",
+    "eslint-config-prettier": "^9.0.0",
+    "node-esm-loader": "^0.2.5",
+    "prettier": "^3.0.3",
+    "rimraf": "^5.0.5",
     "tsc-watch": "^6.0.4",
-    "typescript": "^5.1.6",
-    "typescript-cp": "^0.1.8",
+    "typescript": "^5.2.2",
+    "typescript-cp": "^0.1.9",
     "uvu": "^0.5.6"
   },
   "files": [
@@ -62,7 +62,7 @@
     "bin:prettier": "prettier --ignore-path .gitignore .",
     "bin:tsc": "tsc",
     "bin:tscp": "tscp",
-    "bin:uvu": "NODE_OPTIONS=\"--loader node-esm-loader\" uvu test .test.js",
+    "bin:uvu": "NODE_OPTIONS=\"--import node-esm-loader/register\" uvu test .test.js",
     "build": "run-s bin:tsc bin:tscp",
     "build:watch": "tsc-watch --onSuccess tscp",
     "clean": "rimraf coverage/ dist/",
