--- a/packages/esm-loader-svelte/package.json
+++ b/packages/esm-loader-svelte/package.json
@@ -1,6 +1,6 @@
 {
   "name": "esm-loader-svelte",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "description": "Chainable ESModule Loader for Svelte and SvelteKit",
   "homepage": "https://github.com/brev/esm-loaders/tree/main/packages/esm-loader-svelte#readme",
   "license": "MIT",
@@ -15,29 +15,29 @@
     "url": "https://github.com/brev/esm-loaders/issues"
   },
   "dependencies": {
-    "create-esm-loader": "^0.2.3",
+    "create-esm-loader": "^0.2.5",
     "npm-run-all": "^4.1.5",
-    "semver": "^7.5.3",
-    "svelte": "^4.0.1"
+    "semver": "^7.5.4",
+    "svelte": "^4.2.2"
   },
   "devDependencies": {
-    "@testing-library/svelte": "^4.0.2",
-    "@types/node": "^20.3.2",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1",
-    "c8": "^8.0.0",
-    "eslint": "^8.43.0",
-    "eslint-config-prettier": "^8.8.0",
-    "global-jsdom": "^9.0.1",
+    "@testing-library/svelte": "^4.0.4",
+    "@types/node": "^20.8.10",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.9.1",
+    "c8": "^8.0.1",
+    "eslint": "^8.52.0",
+    "eslint-config-prettier": "^9.0.0",
+    "global-jsdom": "^9.1.0",
     "jsdom": "^22.1.0",
-    "node-esm-loader": "^0.2.3",
-    "postcss": "^8.4.24",
+    "node-esm-loader": "^0.2.5",
+    "postcss": "^8.4.31",
     "postcss-load-config": "^4.0.1",
     "postcss-nested": "^6.0.1",
-    "prettier": "^2.8.8",
-    "rimraf": "^5.0.1",
+    "prettier": "^3.0.3",
+    "rimraf": "^5.0.5",
     "svelte-preprocess": "^5.0.4",
-    "typescript": "^5.1.6",
+    "typescript": "^5.2.2",
     "uvu": "^0.5.6"
   },
   "files": [
@@ -61,7 +61,7 @@
     "bin:eslint": "eslint --ignore-path .gitignore .",
     "bin:prettier": "prettier --ignore-path .gitignore .",
     "bin:tsc": "tsc",
-    "bin:uvu": "NODE_OPTIONS=\"--loader node-esm-loader\" uvu test .test.js",
+    "bin:uvu": "NODE_OPTIONS=\"--import node-esm-loader/register\" uvu test .test.js",
     "build": "run-s bin:tsc",
     "build:watch": "run-s 'bin:tsc --watch'",
     "clean": "rimraf coverage/ dist/",
