--- a/packages/esm-loader-typescript/package.json
+++ b/packages/esm-loader-typescript/package.json
@@ -1,6 +1,6 @@
 {
   "name": "esm-loader-typescript",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Chainable ESModule Loader for Typescript",
   "homepage": "https://github.com/brev/esm-loaders/tree/main/packages/esm-loader-typescript#readme",
   "license": "MIT",
@@ -15,21 +15,21 @@
     "url": "https://github.com/brev/esm-loaders/issues"
   },
   "dependencies": {
-    "create-esm-loader": "^0.2.3",
+    "create-esm-loader": "^0.2.5",
     "npm-run-all": "^4.1.5",
-    "semver": "^7.5.3",
-    "typescript": "^5.1.6"
+    "semver": "^7.5.4",
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
-    "@types/node": "^20.3.2",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1",
-    "c8": "^8.0.0",
-    "eslint": "^8.43.0",
-    "eslint-config-prettier": "^8.8.0",
-    "node-esm-loader": "^0.2.3",
-    "prettier": "^2.8.8",
-    "rimraf": "^5.0.1",
+    "@types/node": "^20.8.10",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.9.1",
+    "c8": "^8.0.1",
+    "eslint": "^8.52.0",
+    "eslint-config-prettier": "^9.0.0",
+    "node-esm-loader": "^0.2.5",
+    "prettier": "^3.0.3",
+    "rimraf": "^5.0.5",
     "uvu": "^0.5.6"
   },
   "files": [
@@ -56,7 +56,7 @@
     "bin:tsc": "tsc",
     "bin:tsc:check": "run-s 'bin:tsc --noEmit'",
     "bin:tsc:checktest": "run-s 'bin:tsc --noEmit --project test/tsconfig.json'",
-    "bin:uvu": "NODE_OPTIONS=\"--loader node-esm-loader\" uvu test .test.js",
+    "bin:uvu": "NODE_OPTIONS=\"--import node-esm-loader/register\" uvu test .test.js",
     "build": "run-s bin:tsc",
     "build:watch": "run-s 'bin:tsc --watch'",
     "clean": "rimraf coverage/ dist/",
